- FIX MDEV-5918 modified:   storage/connect/ha_connect.cc